--- a/composer.json
+++ b/composer.json
@@ -17,11 +17,19 @@
     "name": "adrx/mailman_service",
     "type": "library",
     "require": {
+        "php": "^7.1.3",
         "ext-libxml": "*",
         "ext-dom": "*",
-        "guzzlehttp/guzzle": "~6"
+        "symfony/http-client": "^4.3",
+        "symfony/browser-kit": "^4.3",
+        "symfony/mime": "^4.3"
     },
     "require-dev": {
-        "phpunit/phpunit": "^5"
+        "phpunit/phpunit": "^6"
+    },
+    "extra": {
+        "branch-alias": {
+            "dev-master": "2.0-dev"
+        }
     }
 }
